--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "RSSchool Node.JS training task",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,10 +26,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "eslint": "^7.10.0",
-    "eslint-plugin-import": "^2.22.1",
     "commitlint": "^11.0.0",
-    "eslint-config-airbnb": "^18.2.0"
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "ts-node-dev": "^1.0.0-pre.63"
   },
   "dependencies": {
     "minimist": "^1.2.5"
