--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,19 +4,13 @@
         "node": true
     },
     "extends": [
-        "airbnb"
+        "airbnb-base"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 2018
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["import"],
     "rules": {
     }
 }
