--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -24,13 +24,10 @@
   },
   "homepage": "https://github.com/tensegrity666/caesar-cypher#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
     "commitlint": "^11.0.0",
     "eslint": "^7.10.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "ts-node-dev": "^1.0.0-pre.63"
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   },
   "dependencies": {
     "minimist": "^1.2.5"
